--- a/index.html
+++ b/index.html
@@ -12,25 +12,16 @@
 </head>
 
 <body>
-
     <div class="container">
-        <h1 id="player">Tic Tac Toe</h1>
-
-        <button id="restart">Restart</button>
-
-        <div id="gameboard">
-            <div class="box" id="0"></div>
-            <div class="box" id="1"></div>
-            <div class="box" id="2"></div>
-            <div class="box" id="3"></div>
-            <div class="box" id="4"></div>
-            <div class="box" id="5"></div>
-            <div class="box" id="6"></div>
-            <div class="box" id="7"></div>
-            <div class="box" id="8"></div>
-        </div>
+        <h1>Tic Tac Toe</h1><br>
+        <button id="playButton">Play</button>
     </div>
 
-    <script src="/gameLogic.js"></script>
+    <script>
+        document.getElementById('playButton').addEventListener('click', function () {
+            window.location.href = 'index.html';
+        });
+    </script>
 </body>
+
 </html>
