--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <script>
         document.getElementById('playButton').addEventListener('click', function () {
-            window.location.href = 'index.html';
+            window.location.href = 'game.html';
         });
     </script>
 </body>
